# LiveAgent

./: Dockerfile  Makefile  README.md  README.zh-CN.md
.github/: release.yml
.github/workflows/: ci.yml  desktop-release.yml  update-star-history.yml
crates/agent-gateway/internal/chatwire/: payloads.go  payloads_test.go
crates/agent-gateway/internal/config/: config.go
crates/agent-gateway/internal/handler/: helpers.go  image_proxy.go  outbound_http.go  types.go  types_test.go  upload.go
crates/agent-gateway/internal/server/: chat_commands.go  chat_payloads.go  grpc.go  http_chat.go  http_test.go  tunnel.go  tunnel_proxy.go  tunnel_rewrite.go  tunnel_rewrite_test.go  websocket.go  websocket_chat_handlers.go  websocket_chat_queue_handlers.go  websocket_fs_handlers.go  websocket_git_handlers.go  websocket_history_handlers.go  websocket_memory_handlers.go  websocket_payload_test.go  websocket_payloads.go  websocket_provider_handlers.go  websocket_routes.go  websocket_routes_test.go  websocket_settings_handlers.go  websocket_skills_handlers.go  websocket_terminal_handlers.go
crates/agent-gateway/internal/session/: conversation_stream.go  manager.go  manager_chat_queue.go  manager_chat_runs.go  manager_history_sync.go  manager_registry.go  manager_settings_sync.go  manager_sftp.go  manager_state.go  manager_terminal.go  manager_test.go  manager_tunnel.go  manager_tunnel_test.go  sqlite_chat_event_store.go  tunnel_probe.go
crates/agent-gateway/proto/v1/: gateway.proto
crates/agent-gateway/test/helpers/: load-web-module.mjs
crates/agent-gateway/test/session/: manager_test.go
crates/agent-gateway/test/tunnel/: tunnel_e2e_test.go
crates/agent-gateway/test/websocket/: chat_bridge_test.go  terminal_test.go
crates/agent-gateway/test/webui/: chat-turn-queue.test.mjs  gateway-socket-client.test.mjs  history-chat-ui.test.mjs  ssh-scan-paths.test.mjs  ssh-tunnel-panel.test.mjs  web-settings.test.mjs
crates/agent-gateway/web/: package.json  pnpm-lock.yaml
crates/agent-gateway/web/src/: App.tsx  index.css  styles.css  vite-env.d.ts
crates/agent-gateway/web/test/: assistant-bubble-utils.test.mjs  remote-path-picker-paths.test.mjs  skills-prompt-contract.test.mjs
crates/agent-gui/: biome.json  package.json  pnpm-lock.yaml
crates/agent-gui/src/: App.tsx  index.css  vite-env.d.ts
crates/agent-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/agent-gui/src-tauri/src/: lib.rs
crates/agent-gui/src-tauri/src/commands/: chat_history.rs  fs.rs  git.rs  history_db.rs  mod.rs  settings.rs  subagent_history.rs
crates/agent-gui/src-tauri/src/commands/app/: custom_tools.rs  mod.rs  system.rs  update.rs
crates/agent-gui/src-tauri/src/commands/automation/: hook.rs
crates/agent-gui/src-tauri/src/commands/config/: settings.rs
crates/agent-gui/src-tauri/src/commands/config/settings/: commands.rs  gateway_sync.rs  mod.rs  system.rs  tests.rs
crates/agent-gui/src-tauri/src/commands/integration/: gateway.rs
crates/agent-gui/src-tauri/src/commands/runtime/: terminal.rs
crates/agent-gui/src-tauri/src/commands/workspace/: fs.rs  git.rs
crates/agent-gui/src-tauri/src/runtime/: managed_process.rs  platform.rs  process.rs  shell_runner.rs  task_runner.rs  terminal.rs
crates/agent-gui/src-tauri/src/runtime/terminal/: shell.rs
crates/agent-gui/src-tauri/src/services/: gateway.rs  gateway_bridge.rs  mod.rs  provider_models.rs  proxy.rs  system_proxy.rs
crates/agent-gui/src-tauri/src/services/automation/: db.rs  scheduler.rs  store.rs  tests.rs  types.rs  validate.rs
crates/agent-gui/src-tauri/src/services/gateway/: envelope_handler.rs  settings_sync.rs
crates/agent-gui/src-tauri/src/services/skills/: clawhub.rs  sources.rs
crates/agent-gui/src/components/: AppUpdateButton.tsx  MacOsTitleBarSpacer.tsx  Markdown.tsx  WindowsTitleBar.tsx  icons.tsx
crates/agent-gui/src/i18n/: LocaleContext.tsx  config.ts
crates/agent-gui/src/lib/: monacoNls.ts
crates/agent-gui/src/pages/: ChatPage.tsx  SettingsPage.tsx
crates/agent-gui/test/backend/: release-notes.test.mjs
crates/agent-gui/test/chat/: agent-runner.test.mjs  conversation-state.test.mjs  lazy-collapse.test.mjs  messages.test.mjs  (+2 more)
docs/operations/: deployment.md
scripts/: mirror-manifest.json
scripts/release/: create-ai-release-notes.mjs
(+277 files in other folders)
